--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="start_title">your Random-images website</h1>
+    <h1 class="start_title">Random-images website</h1>
 
     <div class="progress">
       <div class="bar"></div>
